// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translator initialize renders 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={30}
          value=""
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={true}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={30}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;

exports[`Translator input data updates state when input data is invalid 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={30}
          value="abc"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={true}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={30}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;

exports[`Translator input data updates state when input data is valid 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={30}
          value="{\\"some\\": \\"json\\"}"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={30}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;

exports[`Translator translate data updates state with translation result 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={30}
          value="valid data"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={30}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;
